Solve task 2